# tg-calendar-widget

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: builder.rs  calendar.rs  handler.rs  lib.rs  models.rs
src/adapters/: mod.rs  teloxide_adp.rs
src/locale/: translations.rs  types.rs
